// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list should add 1 item 1`] = `
<div>
  <div>
    <button>
      submit
    </button>
    <ul>
      <li>
        1
      </li>
    </ul>
  </div>
</div>
`;

exports[`list should add 4 item 1`] = `
<div>
  <div>
    <button>
      submit
    </button>
    <ul>
      <li>
        4
      </li>
      <li>
        3
      </li>
      <li>
        2
      </li>
      <li>
        1
      </li>
    </ul>
  </div>
</div>
`;

exports[`should HW2 1`] = `
<div>
  <div>
    <button>
      submit
    </button>
    <ul />
  </div>
</div>
`;
